Bug 888473 - Start GeckoJavaSampler early when profiling startup; r=BenWa